--- a/backend/config.env
+++ b/backend/config.env
@@ -1,6 +1,6 @@
 
 
-FRONTEND_URL=https://fitness-app-frontend-6vq6.onrender.com/
+FRONTEND_URL=https://fitness-app-frontend-6vq6.onrender.com
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
